# qupled

./: #qstls_iet.c#  #stls.c#  #stls_hnc.c#  .#stls.c  .#stls.hpp  .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  MANIFEST.in  Makefile  Makefile.lnx  Makefile.mac  Makefile.mac++  README.md  chemical_potential.c  chemical_potential.h  chemicalpotential.hpp  copy-python.cmake  devtool  dynamic_qstls.c  dynamic_qstls.h  dynamic_qstls_iet.c  dynamic_qstls_iet.h  dynamic_stls.c  dynamic_stls.h  exec.c  exec.cpp  foga.yml  input.cpp  input.hpp  numerics.cpp  numerics.hpp  pyproject.toml  qstls.c  qstls.cpp  qstls.h  qstls.hpp  qstls_iet.c  qstls_iet.h  (+25 more)
src/: .#vsstls.cpp  CMakeLists.txt  ESA.cpp  chemical_potential.cpp  chemicalpotential.cpp  esa.cpp  input.cpp  internal_energy.cpp  launcher.cpp  mpi_util.cpp  num_util.cpp  numerics.cpp  python_modules.cpp  python_util.cpp  python_wrappers.cpp  qstls.cpp  qvs.cpp  rdf.cpp  rpa.cpp  run.cpp  stls.cpp  thermo_util.cpp  util.cpp  vector2D.cpp  vector3D.cpp  vector_util.cpp  vsbase.cpp  vsbase_new.cpp  vsstls.cpp  vsstls_new.cpp
src/qupled/: base.py  base_tables.py  classic.py  database.py  dimension.py  esa.py  finite_size_correction.py  finite_size_correction_tables.py  fsc.py  hf.py  hf2d.py  itcf.py  mpi.py  mpi_worker.py  output.py  qstls.py  qstlsiet.py  quantum.py  qvsstls.py  rpa.py  rpa2d.py  scheme_tables.py  serialize.py  stls.py  stls2d.py  stlsiet.py  util.py  vsstls.py
src/qupled/database/: base_tables.py  database_handler.py  finite_size_correction_tables.py  scheme_tables.py
src/qupled/mpi/: runtime.py  worker.py  worker_files.py
src/qupled/native/: OPEN_QUESTIONS.md  REFACTORING_PLAN.md  REFACTORING_PLAN_STEP2.md  REFACTORING_PLAN_STEP3.md  REFACTORING_PLAN_STEP4.md
src/qupled/native/include/: auto_diff.hpp  bin_util.hpp  cdual.hpp  chemical_potential.hpp  database.hpp  dimensions_util.hpp  dual.hpp  esa.hpp  free_energy.hpp  hf.hpp  hf2d.hpp  iet.hpp  input.hpp  internal_energy.hpp  numerics.hpp  python_wrappers.hpp  qstls.hpp  qstlsf0.hpp  qstlsiet.hpp  qstlspimc.hpp  qvs.hpp  qvsstls.hpp  qvsstlsf0.hpp  rdf.hpp  recstls.hpp  rpa.hpp  state_point_grid.hpp  stls.hpp  stls2d.hpp  stlsiet.hpp  thermo_util.hpp  ve.hpp  vector2D.hpp  vsbase.hpp  vsstls.hpp
src/qupled/native/include/new_python_interface/: inputs.hpp  schemes.hpp  util.hpp  utilities.hpp
src/qupled/native/include/python_interface/: inputs.hpp  python_inputs.hpp  python_schemes.hpp  python_wrappers.hpp  schemes.hpp  util.hpp  utilities.hpp
src/qupled/native/include/schemes/: esa.hpp  hf.hpp  iet.hpp  input.hpp  qstls.hpp  qstlsiet.hpp  qvsstls.hpp  rpa.hpp  stls.hpp  stlsiet.hpp  vsstls.hpp
src/qupled/native/include/thermo/: chemical_potential.hpp  dsf_integration.hpp  dsf_moments.hpp  dynamic_structure_factor.hpp  free_energy.hpp  internal_energy.hpp  itcf.hpp  rdf.hpp  thermo_util.hpp
src/qupled/native/include/util/: database.hpp  dimensions_util.hpp  dual.hpp  format.hpp  logger.hpp  mpi_util.hpp  num_util.hpp  numerics.hpp  vector2D.hpp  vector3D.hpp  vector_util.hpp
src/qupled/native/include/vs/: grid_point.hpp  qvsstls.hpp  state_point_grid.hpp  vs_master.hpp  vs_master_base.hpp  vs_worker_base.hpp  vsbase.hpp  vsmanager.hpp  vsmaster_base.hpp  vsstls.hpp  vsworker.hpp  vsworker_base.hpp
src/qupled/native/src/: CMakeLists.txt  auto_diff.cpp  chemical_potential.cpp  database.cpp  dimensions_util.cpp  esa.cpp  hf.cpp  hf2d.cpp  iet.cpp  input.cpp  internal_energy.cpp  numerics.cpp  python_modules.cpp  python_wrappers.cpp  qstls.cpp  qstlsf0.cpp  qstlsiet.cpp  qstlspimc.cpp  qvs.cpp  qvsstls.cpp  qvsstlsf0.cpp  rdf.cpp  recstls.cpp  rpa.cpp  rpa2d.cpp  state_point_grid.cpp  stls.cpp  stls2d.cpp  stlsiet.cpp  thermo_util.cpp  ve.cpp  vector2D.cpp  vsbase.cpp  vsstls.cpp
src/qupled/native/src/cmake/: Dependencies.cmake  NativeModule.cmake  NativeTests.cmake  Sources.cmake  TargetHelpers.cmake
src/qupled/native/src/new_python_interface/: inputs.cpp  native.cpp  schemes.cpp  util.cpp  utilities.cpp
src/qupled/native/src/python_interface/: CMakeLists.txt  inputs.cpp  native.cpp  python_inputs.cpp  python_modules.cpp  python_schemes.cpp  python_wrappers.cpp  schemes.cpp  util.cpp  utilities.cpp
src/qupled/native/src/schemes/: esa.cpp  hf.cpp  iet.cpp  input.cpp  qstls.cpp  qstlsiet.cpp  qvsstls.cpp  rpa.cpp  stls.cpp  stlsiet.cpp  vsstls.cpp
src/qupled/native/src/thermo/: chemical_potential.cpp  dsf_integration.cpp  dsf_moments.cpp  dynamic_structure_factor.cpp  free_energy.cpp  internal_energy.cpp  itcf.cpp  rdf.cpp  thermo_util.cpp
src/qupled/native/src/util/: database.cpp  dimensions_util.cpp  logger.cpp  mpi_util.cpp  num_util.cpp  numerics.cpp  vector2D.cpp  vector3D.cpp  vector_util.cpp
src/qupled/native/src/vs/: qvsstls.cpp  state_point_grid.cpp  vs_master.cpp  vs_master_base.cpp  vsbase.cpp  vsmanager.cpp  vsmaster_base.cpp  vsstls.cpp
src/qupled/native/tests/: CPP_TEST_COVERAGE_PLAN.md  CPP_TEST_GUIDELINES.md  dual_test.cpp  num_util_test.cpp
src/qupled/native/tests/common/: test_environment.cpp
src/qupled/native/tests/fixtures/: input_builders.hpp  temp_paths.hpp  tolerance.hpp
src/qupled/native/tests/schemes/: SCHEMES_TEST_PLAN.md  esa_api_and_esautil_test.cpp  hf_api_and_hfutil_test.cpp  iet_api_and_ietutil_test.cpp  input_api_test.cpp  input_test.cpp  qstls_api_and_qstlsutil_test.cpp  qstlsiet_api_and_qstlsietutil_test.cpp  qvsstls_api_test.cpp  rpa_api_and_rpautil_test.cpp  schemes_phase2_test.cpp  schemes_phase3_quantum_test.cpp  stls_api_and_stlsutil_test.cpp  stlsiet_api_and_stlsietutil_test.cpp  vsstls_api_test.cpp
src/qupled/native/tests/thermo/: THERMO_TEST_PLAN.md  chemical_potential_test.cpp  dynamic_structure_factor_test.cpp  free_energy_test.cpp  internal_energy_test.cpp  (+4 more)
src/qupled/postprocess/: correlation_functions.py  finite_size_correction.py  output.py
src/qupled/schemes/: esa.py  hf.py  qstls.py  qstlsf0.py  qstlsiet.py  qstlspimc.py  qvsstls.py  qvsstlsf0.py  recstls.py  rpa.py  stls.py  stlsiet.py  ve.py  vsstls.py
src/qupled/util/: dimension.py  mpi.py  serialize.py
(+348 files in other folders)
