[build-system]
requires = ["scikit-build-core>=0.12", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "qupled"
version = "0.0.0.dev"
description = "qupled: a package to investigate quantum plasmas via the dielectric formalism"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Federico Lucco Castello", email = "federico.luccocastello@gmail.com" }
]
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "blosc2~=3.2",
    "matplotlib~=3.7",
    "numpy~=2.4",
    "SQLAlchemy~=2.0",
    "scipy~=1.16",
]

[project.optional-dependencies]
test = [
    "pytest~=8.0",
    "pytest-mock~=3.12"
]
docs = [
    "breathe",
    "Sphinx",
    "sphinx-rtd-theme~=1.1.1",
    "sphinxcontrib-mermaid",
]

[dependency-groups]
dev = [
    "black",
    "build",
]
release = [
    "cibuildwheel",
    "twine",
]

[tool.pytest.ini_options]
markers = [
    "unit: fast, mocked unit tests",
    "native: tests for the C++ native bindings (slower than unit, no full pipeline)",
    "integration: full end-to-end integration tests",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.28"
cmake.source-dir = "src/qupled/native/src"
sdist.exclude = [
    ".venv/**",
    "python-venv/**",
    "dist/**",
    "dist-native/**",
    "dist-native-tests/**",
    "wheelhouse/**",
    "tmp/**",
]
wheel.packages = ["src/qupled"]
wheel.install-dir = "qupled"

[tool.scikit-build.cmake.define]
USE_MPI = { env = "USE_MPI", default = "OFF" }
BUILD_NATIVE_TESTS = { env = "BUILD_NATIVE_TESTS", default = "OFF" }

[tool.cibuildwheel]
manylinux-x86_64-image = "ghcr.io/fedluc/qupled/qupled_manylinux_x86_64"
manylinux-aarch64-image = "ghcr.io/fedluc/qupled/qupled_manylinux_aarch64"
build-frontend = "build"
environment = "USE_MPI=OFF"
test-command = "pytest {project}/tests -m unit"
before-test = "pip install '.[test]'"
